Review supported Java versions (#158)